fix bug so all images are visible

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -71,11 +71,11 @@ h1{
     padding: 20px auto auto 20px;
     color: black;
     background: rgba(255,255,255,0.9);
-    border: 5px solid black;
     border-radius: 5px;
-    display: none;
+    opacity: 0;
+    @include transition(opacity 0.4s linear);
     &.active{
-        display: block;
+        opacity: 1;
     }
     h2{
         padding: 10px 0 0 20px;
